change background image position

--- a/src/css/input.css
+++ b/src/css/input.css
@@ -29,4 +29,5 @@
 header {
   background-image: url("../image/ds3_thumb_brand_624x468\ 1.jpg");
   background-size: cover;
+  background-position: center;
 }
