--- a/src/css/main.css
+++ b/src/css/main.css
@@ -589,12 +589,20 @@ video {
   left: 0px;
 }
 
+.right-2 {
+  right: 0.5rem;
+}
+
 .top-0 {
   top: 0px;
 }
 
 .top-2 {
   top: 0.5rem;
+}
+
+.top-4 {
+  top: 1rem;
 }
 
 .z-0 {
@@ -646,6 +654,10 @@ video {
   height: 0.25rem;
 }
 
+.h-10 {
+  height: 2.5rem;
+}
+
 .h-12 {
   height: 3rem;
 }
@@ -672,6 +684,10 @@ video {
 
 .max-h-\[100vh\] {
   max-height: 100vh;
+}
+
+.w-10 {
+  width: 2.5rem;
 }
 
 .w-\[100\%\] {
@@ -704,6 +720,10 @@ video {
 
 .cursor-pointer {
   cursor: pointer;
+}
+
+.cursor-no-drop {
+  cursor: no-drop;
 }
 
 .flex-col {
@@ -772,6 +792,10 @@ video {
   border-radius: 0.125rem;
 }
 
+.rounded-xl {
+  border-radius: 0.75rem;
+}
+
 .border-2 {
   border-width: 2px;
 }
@@ -807,6 +831,11 @@ video {
   background-color: rgb(31 31 31 / var(--tw-bg-opacity));
 }
 
+.bg-\[\#252525\] {
+  --tw-bg-opacity: 1;
+  background-color: rgb(37 37 37 / var(--tw-bg-opacity));
+}
+
 .bg-\[\#262626\] {
   --tw-bg-opacity: 1;
   background-color: rgb(38 38 38 / var(--tw-bg-opacity));
@@ -820,6 +849,11 @@ video {
 .bg-\[\#fe971f\] {
   --tw-bg-opacity: 1;
   background-color: rgb(254 151 31 / var(--tw-bg-opacity));
+}
+
+.bg-\[\#1351a1\] {
+  --tw-bg-opacity: 1;
+  background-color: rgb(19 81 161 / var(--tw-bg-opacity));
 }
 
 .bg-gradient-to-t {
@@ -933,9 +967,27 @@ video {
   opacity: 0.8;
 }
 
+.shadow-2xl {
+  --tw-shadow: 0 25px 50px -12px rgb(0 0 0 / 0.25);
+  --tw-shadow-colored: 0 25px 50px -12px var(--tw-shadow-color);
+  box-shadow: var(--tw-ring-offset-shadow, 0 0 #0000), var(--tw-ring-shadow, 0 0 #0000), var(--tw-shadow);
+}
+
 .shadow-xl {
   --tw-shadow: 0 20px 25px -5px rgb(0 0 0 / 0.1), 0 8px 10px -6px rgb(0 0 0 / 0.1);
   --tw-shadow-colored: 0 20px 25px -5px var(--tw-shadow-color), 0 8px 10px -6px var(--tw-shadow-color);
+  box-shadow: var(--tw-ring-offset-shadow, 0 0 #0000), var(--tw-ring-shadow, 0 0 #0000), var(--tw-shadow);
+}
+
+.shadow-sm {
+  --tw-shadow: 0 1px 2px 0 rgb(0 0 0 / 0.05);
+  --tw-shadow-colored: 0 1px 2px 0 var(--tw-shadow-color);
+  box-shadow: var(--tw-ring-offset-shadow, 0 0 #0000), var(--tw-ring-shadow, 0 0 #0000), var(--tw-shadow);
+}
+
+.shadow-lg {
+  --tw-shadow: 0 10px 15px -3px rgb(0 0 0 / 0.1), 0 4px 6px -4px rgb(0 0 0 / 0.1);
+  --tw-shadow-colored: 0 10px 15px -3px var(--tw-shadow-color), 0 4px 6px -4px var(--tw-shadow-color);
   box-shadow: var(--tw-ring-offset-shadow, 0 0 #0000), var(--tw-ring-shadow, 0 0 #0000), var(--tw-shadow);
 }
 
@@ -954,6 +1006,10 @@ header {
   background-image: url("../image/ds3_thumb_brand_624x468\ 1.jpg");
   background-size: cover;
   background-position: center;
+}
+
+.hover\:rounded-2xl:hover {
+  border-radius: 1rem;
 }
 
 .hover\:bg-\[\#3e3e3e\]:hover {
