--- a/src/css/input.css
+++ b/src/css/input.css
@@ -15,6 +15,12 @@
   background: #ffffff00;
   padding: 1rem;
 }
+html.dark *::-webkit-scrollbar-thumb {
+  background-color: #d2d2d2;
+
+  border-radius: 10px;
+  border: 3px solid #ffffff00;
+}
 
 *::-webkit-scrollbar-thumb {
   background-color: #3d3d3d;
