--- a/src/css/main.css
+++ b/src/css/main.css
@@ -18,6 +18,12 @@
   padding: 1rem;
 }
 
+html.dark *::-webkit-scrollbar-thumb {
+  background-color: #d2d2d2;
+  border-radius: 10px;
+  border: 3px solid #ffffff00;
+}
+
 *::-webkit-scrollbar-thumb {
   background-color: #3d3d3d;
   border-radius: 10px;
@@ -25,7 +31,7 @@
 }
 
 /*
-! tailwindcss v3.2.7 | MIT License | https://tailwindcss.com
+! tailwindcss v3.2.4 | MIT License | https://tailwindcss.com
 */
 
 /*
@@ -585,8 +591,8 @@ video {
   position: sticky;
 }
 
-.left-0 {
-  left: 0px;
+.top-4 {
+  top: 1rem;
 }
 
 .right-2 {
@@ -597,20 +603,20 @@ video {
   top: 0px;
 }
 
+.left-0 {
+  left: 0px;
+}
+
 .top-2 {
   top: 0.5rem;
 }
 
-.top-4 {
-  top: 1rem;
+.z-10 {
+  z-index: 10;
 }
 
 .z-0 {
   z-index: 0;
-}
-
-.z-10 {
-  z-index: 10;
 }
 
 .my-4 {
@@ -618,28 +624,28 @@ video {
   margin-bottom: 1rem;
 }
 
-.mb-4 {
-  margin-bottom: 1rem;
-}
-
-.mb-6 {
-  margin-bottom: 1.5rem;
-}
-
-.mb-8 {
-  margin-bottom: 2rem;
+.mt-8 {
+  margin-top: 2rem;
 }
 
 .ml-4 {
   margin-left: 1rem;
 }
 
+.mb-8 {
+  margin-bottom: 2rem;
+}
+
 .mr-4 {
   margin-right: 1rem;
 }
 
-.mt-8 {
-  margin-top: 2rem;
+.mb-6 {
+  margin-bottom: 1.5rem;
+}
+
+.mb-4 {
+  margin-bottom: 1rem;
 }
 
 .flex {
@@ -650,22 +656,6 @@ video {
   display: table;
 }
 
-.h-1 {
-  height: 0.25rem;
-}
-
-.h-10 {
-  height: 2.5rem;
-}
-
-.h-12 {
-  height: 3rem;
-}
-
-.h-\[100\%\] {
-  height: 100%;
-}
-
 .h-\[100vh\] {
   height: 100vh;
 }
@@ -674,8 +664,24 @@ video {
   height: 20rem;
 }
 
+.h-10 {
+  height: 2.5rem;
+}
+
 .h-\[3\.2rem\] {
   height: 3.2rem;
+}
+
+.h-\[100\%\] {
+  height: 100%;
+}
+
+.h-12 {
+  height: 3rem;
+}
+
+.h-1 {
+  height: 0.25rem;
 }
 
 .h-full {
@@ -690,20 +696,20 @@ video {
   width: 2.5rem;
 }
 
-.w-\[100\%\] {
-  width: 100%;
-}
-
 .w-\[3\.2rem\] {
   width: 3.2rem;
 }
 
-.w-\[30\%\] {
-  width: 30%;
+.w-\[100\%\] {
+  width: 100%;
 }
 
 .w-full {
   width: 100%;
+}
+
+.w-\[30\%\] {
+  width: 30%;
 }
 
 .min-w-\[20rem\] {
@@ -746,16 +752,16 @@ video {
   justify-content: space-between;
 }
 
-.space-x-16 > :not([hidden]) ~ :not([hidden]) {
-  --tw-space-x-reverse: 0;
-  margin-right: calc(4rem * var(--tw-space-x-reverse));
-  margin-left: calc(4rem * calc(1 - var(--tw-space-x-reverse)));
-}
-
 .space-x-7 > :not([hidden]) ~ :not([hidden]) {
   --tw-space-x-reverse: 0;
   margin-right: calc(1.75rem * var(--tw-space-x-reverse));
   margin-left: calc(1.75rem * calc(1 - var(--tw-space-x-reverse)));
+}
+
+.space-x-16 > :not([hidden]) ~ :not([hidden]) {
+  --tw-space-x-reverse: 0;
+  margin-right: calc(4rem * var(--tw-space-x-reverse));
+  margin-left: calc(4rem * calc(1 - var(--tw-space-x-reverse)));
 }
 
 .space-x-8 > :not([hidden]) ~ :not([hidden]) {
@@ -776,6 +782,10 @@ video {
   overflow-x: hidden;
 }
 
+.rounded-xl {
+  border-radius: 0.75rem;
+}
+
 .rounded-\[50\%\] {
   border-radius: 50%;
 }
@@ -788,24 +798,20 @@ video {
   border-radius: 0.125rem;
 }
 
-.rounded-xl {
-  border-radius: 0.75rem;
-}
-
 .border-2 {
   border-width: 2px;
 }
 
-.border-b-2 {
-  border-bottom-width: 2px;
+.border-r-2 {
+  border-right-width: 2px;
 }
 
 .border-l-2 {
   border-left-width: 2px;
 }
 
-.border-r-2 {
-  border-right-width: 2px;
+.border-b-2 {
+  border-bottom-width: 2px;
 }
 
 .border-solid {
@@ -827,14 +833,14 @@ video {
   background-color: rgb(31 31 31 / var(--tw-bg-opacity));
 }
 
-.bg-\[\#252525\] {
-  --tw-bg-opacity: 1;
-  background-color: rgb(37 37 37 / var(--tw-bg-opacity));
-}
-
 .bg-\[\#262626\] {
   --tw-bg-opacity: 1;
   background-color: rgb(38 38 38 / var(--tw-bg-opacity));
+}
+
+.bg-\[\#252525\] {
+  --tw-bg-opacity: 1;
+  background-color: rgb(37 37 37 / var(--tw-bg-opacity));
 }
 
 .bg-\[\#404040\] {
@@ -861,12 +867,12 @@ video {
   --tw-gradient-to: transparent;
 }
 
-.p-2 {
-  padding: 0.5rem;
-}
-
 .p-4 {
   padding: 1rem;
+}
+
+.p-2 {
+  padding: 0.5rem;
 }
 
 .px-4 {
@@ -879,40 +885,40 @@ video {
   padding-right: 1.5rem;
 }
 
-.pb-2 {
-  padding-bottom: 0.5rem;
+.pt-8 {
+  padding-top: 2rem;
 }
 
 .pb-8 {
   padding-bottom: 2rem;
 }
 
-.pl-2 {
-  padding-left: 0.5rem;
-}
-
 .pr-2 {
   padding-right: 0.5rem;
 }
 
-.pt-8 {
-  padding-top: 2rem;
+.pl-2 {
+  padding-left: 0.5rem;
+}
+
+.pb-2 {
+  padding-bottom: 0.5rem;
 }
 
 .font-\[outfit\] {
   font-family: outfit;
 }
 
-.text-\[1\.2rem\] {
-  font-size: 1.2rem;
+.text-\[2\.6rem\] {
+  font-size: 2.6rem;
 }
 
 .text-\[1\.4rem\] {
   font-size: 1.4rem;
 }
 
-.text-\[2\.6rem\] {
-  font-size: 2.6rem;
+.text-\[1\.2rem\] {
+  font-size: 1.2rem;
 }
 
 .font-extrabold {
@@ -927,11 +933,6 @@ video {
   line-height: 1.25;
 }
 
-.text-\[\#F58706\] {
-  --tw-text-opacity: 1;
-  color: rgb(245 135 6 / var(--tw-text-opacity));
-}
-
 .text-\[\#fe971f\] {
   --tw-text-opacity: 1;
   color: rgb(254 151 31 / var(--tw-text-opacity));
@@ -942,16 +943,21 @@ video {
   color: rgb(255 255 255 / var(--tw-text-opacity));
 }
 
+.text-\[\#F58706\] {
+  --tw-text-opacity: 1;
+  color: rgb(245 135 6 / var(--tw-text-opacity));
+}
+
 .underline {
   text-decoration-line: underline;
 }
 
-.opacity-40 {
-  opacity: 0.4;
-}
-
 .opacity-60 {
   opacity: 0.6;
+}
+
+.opacity-40 {
+  opacity: 0.4;
 }
 
 .opacity-80 {
@@ -1001,11 +1007,6 @@ header {
   color: rgb(254 151 31 / var(--tw-text-opacity));
 }
 
-.dark .dark\:border-\[\#f3f3f3\] {
-  --tw-border-opacity: 1;
-  border-color: rgb(243 243 243 / var(--tw-border-opacity));
-}
-
 .dark .dark\:border-\[\#D2D2D2\] {
   --tw-border-opacity: 1;
   border-color: rgb(210 210 210 / var(--tw-border-opacity));
@@ -1014,6 +1015,11 @@ header {
 .dark .dark\:bg-\[\#c9c9c9\] {
   --tw-bg-opacity: 1;
   background-color: rgb(201 201 201 / var(--tw-bg-opacity));
+}
+
+.dark .dark\:bg-\[\#F3F3F3\] {
+  --tw-bg-opacity: 1;
+  background-color: rgb(243 243 243 / var(--tw-bg-opacity));
 }
 
 .dark .dark\:bg-\[\#E7E6E6\] {
@@ -1026,13 +1032,9 @@ header {
   background-color: rgb(210 210 210 / var(--tw-bg-opacity));
 }
 
-.dark .dark\:bg-\[\#F3F3F3\] {
+.dark .dark\:bg-\[\#e4e4e4\] {
   --tw-bg-opacity: 1;
-  background-color: rgb(243 243 243 / var(--tw-bg-opacity));
-}
-
-.dark .dark\:bg-gradient-to-t {
-  background-image: linear-gradient(to top, var(--tw-gradient-stops));
+  background-color: rgb(228 228 228 / var(--tw-bg-opacity));
 }
 
 .dark .dark\:from-\[\#f3f3f3\] {
@@ -1046,44 +1048,9 @@ header {
   color: rgb(40 40 40 / var(--tw-text-opacity));
 }
 
-.dark .dark\:text-\[\#7a7a7a\] {
-  --tw-text-opacity: 1;
-  color: rgb(122 122 122 / var(--tw-text-opacity));
-}
-
-.dark .dark\:text-\[\#535353\] {
-  --tw-text-opacity: 1;
-  color: rgb(83 83 83 / var(--tw-text-opacity));
-}
-
-.dark .dark\:text-\[\#353535\] {
-  --tw-text-opacity: 1;
-  color: rgb(53 53 53 / var(--tw-text-opacity));
-}
-
-.dark .dark\:text-\[\#1b1b1b\] {
-  --tw-text-opacity: 1;
-  color: rgb(27 27 27 / var(--tw-text-opacity));
-}
-
-.dark .dark\:text-\[\#000000\] {
-  --tw-text-opacity: 1;
-  color: rgb(0 0 0 / var(--tw-text-opacity));
-}
-
-.dark .dark\:text-\[\#575757\] {
-  --tw-text-opacity: 1;
-  color: rgb(87 87 87 / var(--tw-text-opacity));
-}
-
 .dark .dark\:text-\[\#2e2e2e\] {
   --tw-text-opacity: 1;
   color: rgb(46 46 46 / var(--tw-text-opacity));
-}
-
-.dark .dark\:text-\[\#1a1a1a\] {
-  --tw-text-opacity: 1;
-  color: rgb(26 26 26 / var(--tw-text-opacity));
 }
 
 .dark .dark\:text-\[\#0C0C0C\] {
@@ -1095,9 +1062,9 @@ header {
   opacity: 0.75;
 }
 
-.dark .dark\:shadow-lg {
-  --tw-shadow: 0 10px 15px -3px rgb(0 0 0 / 0.1), 0 4px 6px -4px rgb(0 0 0 / 0.1);
-  --tw-shadow-colored: 0 10px 15px -3px var(--tw-shadow-color), 0 4px 6px -4px var(--tw-shadow-color);
+.dark .dark\:shadow-md {
+  --tw-shadow: 0 4px 6px -1px rgb(0 0 0 / 0.1), 0 2px 4px -2px rgb(0 0 0 / 0.1);
+  --tw-shadow-colored: 0 4px 6px -1px var(--tw-shadow-color), 0 2px 4px -2px var(--tw-shadow-color);
   box-shadow: var(--tw-ring-offset-shadow, 0 0 #0000), var(--tw-ring-shadow, 0 0 #0000), var(--tw-shadow);
 }
 
@@ -1107,21 +1074,10 @@ header {
   box-shadow: var(--tw-ring-offset-shadow, 0 0 #0000), var(--tw-ring-shadow, 0 0 #0000), var(--tw-shadow);
 }
 
-.dark .dark\:shadow-sm {
-  --tw-shadow: 0 1px 2px 0 rgb(0 0 0 / 0.05);
-  --tw-shadow-colored: 0 1px 2px 0 var(--tw-shadow-color);
+.dark .dark\:shadow-2xl {
+  --tw-shadow: 0 25px 50px -12px rgb(0 0 0 / 0.25);
+  --tw-shadow-colored: 0 25px 50px -12px var(--tw-shadow-color);
   box-shadow: var(--tw-ring-offset-shadow, 0 0 #0000), var(--tw-ring-shadow, 0 0 #0000), var(--tw-shadow);
-}
-
-.dark .dark\:shadow-md {
-  --tw-shadow: 0 4px 6px -1px rgb(0 0 0 / 0.1), 0 2px 4px -2px rgb(0 0 0 / 0.1);
-  --tw-shadow-colored: 0 4px 6px -1px var(--tw-shadow-color), 0 2px 4px -2px var(--tw-shadow-color);
-  box-shadow: var(--tw-ring-offset-shadow, 0 0 #0000), var(--tw-ring-shadow, 0 0 #0000), var(--tw-shadow);
-}
-
-.dark .dark\:hover\:bg-\[\#000\]:hover {
-  --tw-bg-opacity: 1;
-  background-color: rgb(0 0 0 / var(--tw-bg-opacity));
 }
 
 .dark .dark\:hover\:bg-\[\#d4d4d4\]:hover {
