add volume range

--- a/src/css/main.css
+++ b/src/css/main.css
@@ -611,6 +611,62 @@ video {
   top: 1rem;
 }
 
+.top-\[50\%\] {
+  top: 50%;
+}
+
+.-top-1\/2 {
+  top: -50%;
+}
+
+.-left-1\/2 {
+  left: -50%;
+}
+
+.top-10 {
+  top: 2.5rem;
+}
+
+.-top-10 {
+  top: -2.5rem;
+}
+
+.-top-\[10rem\] {
+  top: -10rem;
+}
+
+.-top-\[5rem\] {
+  top: -5rem;
+}
+
+.left-2 {
+  left: 0.5rem;
+}
+
+.right-0 {
+  right: 0px;
+}
+
+.-right-0 {
+  right: -0px;
+}
+
+.-right-\[5rem\] {
+  right: -5rem;
+}
+
+.-right-\[3rem\] {
+  right: -3rem;
+}
+
+.-right-\[3\.1rem\] {
+  right: -3.1rem;
+}
+
+.-right-\[3\.2rem\] {
+  right: -3.2rem;
+}
+
 .z-0 {
   z-index: 0;
 }
@@ -654,6 +710,10 @@ video {
 
 .table {
   display: table;
+}
+
+.hidden {
+  display: none;
 }
 
 .h-1 {
@@ -714,6 +774,16 @@ video {
 
 .max-w-\[55\%\] {
   max-width: 55%;
+}
+
+.rotate-90 {
+  --tw-rotate: 90deg;
+  transform: translate(var(--tw-translate-x), var(--tw-translate-y)) rotate(var(--tw-rotate)) skewX(var(--tw-skew-x)) skewY(var(--tw-skew-y)) scaleX(var(--tw-scale-x)) scaleY(var(--tw-scale-y));
+}
+
+.-rotate-90 {
+  --tw-rotate: -90deg;
+  transform: translate(var(--tw-translate-x), var(--tw-translate-y)) rotate(var(--tw-rotate)) skewX(var(--tw-skew-x)) skewY(var(--tw-skew-y)) scaleX(var(--tw-scale-x)) scaleY(var(--tw-scale-y));
 }
 
 .cursor-pointer {
