add backend structure

--- a/public/views/index.html
+++ b/public/views/index.html
@@ -5,7 +5,7 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <link rel="stylesheet" href="./css/main.css" />
+    <link rel="stylesheet" href="../css/main.css" />
     <title>Music PLayer</title>
 </head>
 
@@ -42,7 +42,7 @@
 
                 <div
                     class="sticky dark:bg-[#E7E6E6] top-2 z-10 my-4 mb-8 flex h-12 w-full items-center justify-between rounded-lg bg-[#1f1f1f] px-4 shadow-xl">
-                    <audio id="audio-player" src="./music/Bell Gargoyle.mp3" loop></audio>
+                    <audio id="audio-player" src="../music/Bell Gargoyle.mp3" loop></audio>
                     <span data-isPlay="false" id="play"
                         class="cursor-pointer border-r-2 dark:border-[#D2D2D2] border-[#404040] pr-2 text-[#fe971f]"><i
                             class="fa-solid fa-play"></i></span>
@@ -100,10 +100,10 @@
         </main>
     </div>
 
-    <script src="./js/fonticon.js"></script>
-    <script src="./js/musictarck.js"></script>
-    <script src="./js/player.js"></script>
-    <script src="./js/app.js"></script>
+    <script src="../js/fonticon.js"></script>
+    <script src="../js/musictarck.js"></script>
+    <script src="../js/player.js"></script>
+    <script src="../js/app.js"></script>
 </body>
 
 </html>
