--- a/public/views/index.html
+++ b/public/views/index.html
@@ -42,9 +42,7 @@
 
                 <div
                     class="sticky dark:bg-[#E7E6E6] top-2 z-10 my-4 mb-8 flex h-12 w-full items-center justify-between rounded-lg bg-[#1f1f1f] px-4 shadow-xl">
-                    <audio id="audio-player"
-                        src=""
-                        loop></audio>
+                    <audio id="audio-player" src="" loop></audio>
                     <span data-isPlay="false" id="play"
                         class="cursor-pointer border-r-2 dark:border-[#D2D2D2] border-[#404040] pr-2 text-[#fe971f]"><i
                             class="fa-solid fa-play"></i></span>
@@ -77,6 +75,7 @@
                             <th class="font-light">Time</th>
                             <th class="font-light">MP3</th>
                             <th class="font-light">FLAC</th>
+                            <th class="font-light">Delete</th>
                         </tr>
                     </thead>
 
