--- a/public/css/input.css
+++ b/public/css/input.css
@@ -47,3 +47,57 @@ header {
   scale: 1.2;
   color: rgb(231, 52, 52);
 }
+.hDiv {
+  display: flex;
+
+  width: 100%;
+  justify-content: end;
+  gap: 1rem;
+}
+.modal.active {
+  width: 100%;
+  height: 100%;
+  background-color: rgb(14, 14, 14);
+  position: absolute;
+  z-index: 20;
+  display: flex;
+  padding: 1rem;
+}
+.modal {
+  display: none;
+}
+form {
+  width: 100%;
+  display: flex;
+  flex-direction: column;
+  gap: 1rem;
+  align-items: center;
+  justify-content: center;
+}
+.inputText {
+  width: 14rem;
+  height: 2rem;
+  outline: none;
+  border: none;
+  padding: 1rem;
+  background-color: #3d3d3d;
+  border-radius: 0.2rem;
+  color: #fe971f;
+}
+.lableText {
+  color: white;
+  font-size: 1.2rem;
+}
+.inputFile {
+  height: 4rem;
+}
+.submitBtn {
+  padding: 0.5rem 1rem;
+  font-size: large;
+  border-radius: 0.5rem;
+  background-color: #fe971f;
+  font-weight: bold;
+}
+.submitBtn:hover {
+  background-color: #faa341;
+}
