disabled selected music

--- a/public/css/input.css
+++ b/public/css/input.css
@@ -134,3 +134,9 @@ audio {
   background-color: #1f1f1f;
   box-shadow: 0px 2px 10px rgba(0, 0, 0, 0.226);
 }
+.msuicTrack.dis {
+  pointer-events: none;
+  user-select: none;
+
+  color: #ffffff27;
+}
