--- a/public/css/main.css
+++ b/public/css/main.css
@@ -1119,6 +1119,14 @@ audio {
   box-shadow: 0px 2px 10px rgba(0, 0, 0, 0.226);
 }
 
+.audio-player.dis {
+  opacity: 0.5;
+  -webkit-user-select: none;
+     -moz-user-select: none;
+          user-select: none;
+  pointer-events: none;
+}
+
 .msuicTrack.dis {
   pointer-events: none;
   -webkit-user-select: none;
